// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select Select baseVue demo works fine 1`] = `
<div
  class="tdesign-demo-select-base"
>
  <div
    class="t-select__wrap"
  >
    <div
      class="t-input__wrap t-select-input--empty t-select"
    >
      <div
        class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        />
        <input
          autocomplete=""
          class="t-input__inner"
          placeholder="请选择云解决方案"
          readonly="readonly"
          type="text"
          unselectable="on"
        />
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-fake-arrow t-select__right-icon"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
              stroke="black"
              stroke-opacity="0.9"
              stroke-width="1.3"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
   
  <div
    class="t-select__wrap"
  >
    <div
      class="t-input__wrap t-select-input--empty t-select"
    >
      <div
        class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        />
        <input
          autocomplete=""
          class="t-input__inner"
          placeholder="请选择云产品"
          readonly="readonly"
          type="text"
          unselectable="on"
        />
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-fake-arrow t-select__right-icon"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
              stroke="black"
              stroke-opacity="0.9"
              stroke-width="1.3"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select Select collapsedVue demo works fine 1`] = `
<div>
  <div
    class="t-select__wrap"
  >
    <div
      class="t-input__wrap t-tag-input t-tag-input--break-line t-select-input--multiple t-select"
    >
      <div
        class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        >
          <span
            class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
          >
            选项一
            <svg
              class="t-icon t-icon-close t-tag__icon-close"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
          <span
            class="t-tag t-tag--default t-size-m t-tag--dark"
          >
            +1
          </span>
        </div>
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-fake-arrow t-select__right-icon"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
              stroke="black"
              stroke-opacity="0.9"
              stroke-width="1.3"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
   
  <br />
  <br />
   
  <div
    class="t-select__wrap"
  >
    <div
      class="t-input__wrap t-tag-input t-tag-input--break-line t-select-input--multiple t-select"
    >
      <div
        class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        >
          <span
            class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
          >
            选项一
            <svg
              class="t-icon t-icon-close t-tag__icon-close"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
          <span
            style="color: rgb(237, 123, 47);"
          >
            +1
          </span>
        </div>
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-fake-arrow t-select__right-icon"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
              stroke="black"
              stroke-opacity="0.9"
              stroke-width="1.3"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
   
  <br />
  <br />
   
  <div
    class="t-select__wrap"
  >
    <div
      class="t-input__wrap t-tag-input t-tag-input--break-line t-select-input--multiple t-select"
    >
      <div
        class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        >
          <span
            class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
          >
            选项一
            <svg
              class="t-icon t-icon-close t-tag__icon-close"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
          <span>
             
            <span
              style="color: rgb(0, 168, 112);"
            >
              +1
            </span>
          </span>
        </div>
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-fake-arrow t-select__right-icon"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
              stroke="black"
              stroke-opacity="0.9"
              stroke-width="1.3"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select Select creatableVue demo works fine 1`] = `
<div>
  <div
    class="t-select__wrap"
    style="width: 200px;"
  >
    <div
      class="t-input__wrap t-select-input--empty t-select"
    >
      <div
        class="t-input t-size-m t-is-default t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        />
        <input
          autocomplete=""
          class="t-input__inner"
          placeholder="支持自定义创建"
          type="text"
          unselectable="off"
        />
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-fake-arrow t-select__right-icon"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
              stroke="black"
              stroke-opacity="0.9"
              stroke-width="1.3"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select Select customOptionsVue demo works fine 1`] = `
<div
  class="tdesign-demo-select-options"
>
  <div
    class="t-select__wrap"
  >
    <div
      class="t-input__wrap t-select-input--empty t-select"
    >
      <div
        class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        />
        <input
          autocomplete=""
          class="t-input__inner"
          placeholder="请选择"
          readonly="readonly"
          type="text"
          unselectable="on"
        />
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-fake-arrow t-select__right-icon"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
              stroke="black"
              stroke-opacity="0.9"
              stroke-width="1.3"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
   
  <br />
  <br />
   
  <div
    class="t-select__wrap"
  >
    <div
      class="t-input__wrap t-select-input--empty t-select"
    >
      <div
        class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        />
        <input
          autocomplete=""
          class="t-input__inner"
          placeholder="请选择"
          readonly="readonly"
          type="text"
          unselectable="on"
        />
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-fake-arrow t-select__right-icon"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
              stroke="black"
              stroke-opacity="0.9"
              stroke-width="1.3"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select Select customSelectedVue demo works fine 1`] = `
<div>
  <div
    class="t-select__wrap"
  >
    <div
      class="t-input__wrap t-tag-input t-tag-input--break-line t-select-input--multiple t-select"
    >
      <div
        class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        >
          <span
            class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
          >
            选项一(1)
            <svg
              class="t-icon t-icon-close t-tag__icon-close"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
          <span
            class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
          >
            选项二(2)
            <svg
              class="t-icon t-icon-close t-tag__icon-close"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
          <span
            class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
          >
            选项三(3)
            <svg
              class="t-icon t-icon-close t-tag__icon-close"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
        </div>
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-fake-arrow t-select__right-icon"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
              stroke="black"
              stroke-opacity="0.9"
              stroke-width="1.3"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
   
  <br />
  <br />
   
  <div
    class="t-select__wrap"
  >
    <div
      class="t-input__wrap t-tag-input t-tag-input--break-line t-select-input--multiple t-select"
    >
      <div
        class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        >
          <span
            class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
          >
            
        选项四(4)
      
            <svg
              class="t-icon t-icon-close t-tag__icon-close"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
          <span
            class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
          >
            
        选项五(5)
      
            <svg
              class="t-icon t-icon-close t-tag__icon-close"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
          <span
            class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
          >
            
        选项六(6)
      
            <svg
              class="t-icon t-icon-close t-tag__icon-close"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
          <span
            class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
          >
            
        选项七(7)
      
            <svg
              class="t-icon t-icon-close t-tag__icon-close"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
        </div>
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-fake-arrow t-select__right-icon"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
              stroke="black"
              stroke-opacity="0.9"
              stroke-width="1.3"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select Select disabledVue demo works fine 1`] = `
<div>
  <div
    class="t-select__wrap"
    style="width: 200px; display: inline-block; margin-right: 20px;"
  >
    <div
      class="t-input__wrap t-select-input--empty t-select"
    >
      <div
        class="t-input t-size-m t-is-disabled t-is-default t-is-readonly t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        />
        <input
          autocomplete=""
          class="t-input__inner"
          disabled="disabled"
          placeholder="-请选择-"
          readonly="readonly"
          type="text"
          unselectable="on"
        />
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-fake-arrow t-select__right-icon"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
              stroke="black"
              stroke-opacity="0.9"
              stroke-width="1.3"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
   
  <div
    class="t-select__wrap"
    style="width: 200px; display: inline-block;"
  >
    <div
      class="t-input__wrap t-tag-input t-tag-input--break-line t-select-input--multiple t-select"
    >
      <div
        class="t-input t-size-m t-is-disabled t-is-default t-is-readonly t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        >
          <span
            class="t-tag t-tag--default t-size-m t-tag--dark t-is-disabled t-tag--disabled"
          >
            选项一
          </span>
          <span
            class="t-tag t-tag--default t-size-m t-tag--dark t-is-disabled t-tag--disabled"
          >
            选项二
          </span>
        </div>
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-fake-arrow t-select__right-icon"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
              stroke="black"
              stroke-opacity="0.9"
              stroke-width="1.3"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select Select filterableVue demo works fine 1`] = `
<div>
  <div
    class="t-select__wrap"
    style="width: 200px; display: inline-block; margin: 0px 20px 20px 0px;"
  >
    <div
      class="t-input__wrap t-select-input--empty t-select"
    >
      <div
        class="t-input t-size-m t-is-default t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        />
        <input
          autocomplete=""
          class="t-input__inner"
          placeholder="-请选择-"
          type="text"
          unselectable="off"
        />
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-fake-arrow t-select__right-icon"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
              stroke="black"
              stroke-opacity="0.9"
              stroke-width="1.3"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
   
  <div
    class="t-select__wrap"
    style="width: 400px; display: inline-block;"
  >
    <div
      class="t-input__wrap t-tag-input t-tag-input--break-line t-select-input--multiple t-select-input--empty t-select"
    >
      <div
        class="t-input t-size-m t-is-default t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        />
        <input
          autocomplete=""
          class="t-input__inner"
          placeholder="-请选择-"
          type="text"
          unselectable="off"
        />
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-fake-arrow t-select__right-icon"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
              stroke="black"
              stroke-opacity="0.9"
              stroke-width="1.3"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select Select groupVue demo works fine 1`] = `
<div
  class="tdesign-demo-select-base"
>
  <div
    class="t-select__wrap"
  >
    <div
      class="t-input__wrap t-select-input--empty t-select"
    >
      <div
        class="t-input t-size-m t-is-default t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        />
        <input
          autocomplete=""
          class="t-input__inner"
          placeholder="请选择"
          type="text"
          unselectable="off"
        />
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-fake-arrow t-select__right-icon"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
              stroke="black"
              stroke-opacity="0.9"
              stroke-width="1.3"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
   
  <div
    class="t-select__wrap"
  >
    <div
      class="t-input__wrap t-select-input--empty t-select"
    >
      <div
        class="t-input t-size-m t-is-default t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        />
        <input
          autocomplete=""
          class="t-input__inner"
          placeholder="请选择"
          type="text"
          unselectable="off"
        />
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-fake-arrow t-select__right-icon"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
              stroke="black"
              stroke-opacity="0.9"
              stroke-width="1.3"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select Select labelInValueVue demo works fine 1`] = `
<div>
  <div
    class="t-select__wrap"
    style="width: 200px; display: inline-block; margin-right: 20px;"
  >
    <div
      class="t-input__wrap t-select"
    >
      <div
        class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        />
        <input
          autocomplete=""
          class="t-input__inner"
          placeholder="-请选择-"
          readonly="readonly"
          type="text"
          unselectable="on"
        />
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-fake-arrow t-select__right-icon"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
              stroke="black"
              stroke-opacity="0.9"
              stroke-width="1.3"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
   
  <div
    class="t-select__wrap"
    style="width: 200px; display: inline-block;"
  >
    <div
      class="t-input__wrap t-tag-input t-tag-input--break-line t-select-input--multiple t-select"
    >
      <div
        class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        >
          <span
            class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
          >
            选项一
            <svg
              class="t-icon t-icon-close t-tag__icon-close"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
        </div>
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-fake-arrow t-select__right-icon"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
              stroke="black"
              stroke-opacity="0.9"
              stroke-width="1.3"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select Select maxVue demo works fine 1`] = `
<div>
  <div
    class="t-select__wrap"
    style="width: 200px;"
  >
    <div
      class="t-input__wrap t-tag-input t-tag-input--break-line t-select-input--multiple t-select-input--empty t-select"
    >
      <div
        class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        />
        <input
          autocomplete=""
          class="t-input__inner"
          placeholder="-请选择-"
          readonly="readonly"
          type="text"
          unselectable="on"
        />
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-fake-arrow t-select__right-icon"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
              stroke="black"
              stroke-opacity="0.9"
              stroke-width="1.3"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select Select multipleVue demo works fine 1`] = `
<div
  class="tdesign-demo-select-base"
>
  <div
    class="t-select__wrap"
  >
    <div
      class="t-input__wrap t-tag-input t-tag-input--break-line t-select-input--multiple t-select"
    >
      <div
        class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        >
          <span
            class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
          >
            区块链
            <svg
              class="t-icon t-icon-close t-tag__icon-close"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
          <span
            class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
          >
            人工智能
            <svg
              class="t-icon t-icon-close t-tag__icon-close"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
        </div>
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-fake-arrow t-select__right-icon"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
              stroke="black"
              stroke-opacity="0.9"
              stroke-width="1.3"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
   
  <br />
  <br />
   
  <div
    class="t-select__wrap"
  >
    <div
      class="t-input__wrap t-tag-input t-tag-input--break-line t-select-input--multiple t-select"
    >
      <div
        class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        >
          <span
            class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
          >
            1
            <svg
              class="t-icon t-icon-close t-tag__icon-close"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
          <span
            class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
          >
            2
            <svg
              class="t-icon t-icon-close t-tag__icon-close"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
          <span
            class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
          >
            3
            <svg
              class="t-icon t-icon-close t-tag__icon-close"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
          <span
            class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
          >
            4
            <svg
              class="t-icon t-icon-close t-tag__icon-close"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
          <span
            class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
          >
            5
            <svg
              class="t-icon t-icon-close t-tag__icon-close"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
          <span
            class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
          >
            6
            <svg
              class="t-icon t-icon-close t-tag__icon-close"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
        </div>
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-fake-arrow t-select__right-icon"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
              stroke="black"
              stroke-opacity="0.9"
              stroke-width="1.3"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
   
  <br />
  <br />
   
  <div
    class="t-select__wrap"
  >
    <div
      class="t-input__wrap t-tag-input t-tag-input--break-line t-select-input--multiple t-select"
    >
      <div
        class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        >
          <span
            class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
          >
            区块链
            <svg
              class="t-icon t-icon-close t-tag__icon-close"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
          <span
            class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
          >
            人工智能
            <svg
              class="t-icon t-icon-close t-tag__icon-close"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
          <span
            class="t-tag t-tag--default t-size-m t-tag--dark"
          >
            +2
          </span>
        </div>
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-fake-arrow t-select__right-icon"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
              stroke="black"
              stroke-opacity="0.9"
              stroke-width="1.3"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select Select noborderVue demo works fine 1`] = `
<div>
  <div
    class="t-select__wrap"
    style="width: 200px;"
  >
    <div
      class="t-input__wrap t-select-input--borderless t-select"
    >
      <div
        class="t-input t-size-m t-is-default t-is-readonly t-input--auto-width t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        />
        <input
          autocomplete=""
          class="t-input__inner"
          placeholder="-请选择-"
          readonly="readonly"
          type="text"
          unselectable="on"
        />
        <span
          class="t-input__input-pre"
        >
          已选择的选项
        </span>
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-fake-arrow t-select__right-icon"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
              stroke="black"
              stroke-opacity="0.9"
              stroke-width="1.3"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select Select panelVue demo works fine 1`] = `
<div
  class="tdesign-demo-select-base"
>
  <div
    class="t-select__wrap"
  >
    <div
      class="t-input__wrap t-select-input--empty t-select"
    >
      <div
        class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        />
        <input
          autocomplete=""
          class="t-input__inner"
          placeholder="请选择云解决方案"
          readonly="readonly"
          type="text"
          unselectable="on"
        />
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-fake-arrow t-select__right-icon"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
              stroke="black"
              stroke-opacity="0.9"
              stroke-width="1.3"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
   
  <div
    class="t-select__wrap"
  >
    <div
      class="t-input__wrap t-select-input--empty t-select"
    >
      <div
        class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        />
        <input
          autocomplete=""
          class="t-input__inner"
          placeholder="请选择云产品"
          readonly="readonly"
          type="text"
          unselectable="on"
        />
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-fake-arrow t-select__right-icon"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
              stroke="black"
              stroke-opacity="0.9"
              stroke-width="1.3"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select Select popupPropsVue demo works fine 1`] = `
<div>
  <div
    class="t-select__wrap"
    style="width: 200px; display: inline-block;"
  >
    <div
      class="t-input__wrap t-select"
    >
      <div
        class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        />
        <input
          autocomplete=""
          class="t-input__inner"
          placeholder="-请选择-"
          readonly="readonly"
          type="text"
          unselectable="on"
        />
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-fake-arrow t-select__right-icon"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
              stroke="black"
              stroke-opacity="0.9"
              stroke-width="1.3"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
   
  <div
    class="t-select__wrap"
    style="width: 200px; display: inline-block; margin-left: 20px;"
  >
    <div
      class="t-input__wrap t-select"
    >
      <div
        class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        />
        <input
          autocomplete=""
          class="t-input__inner"
          placeholder="-请选择-"
          readonly="readonly"
          type="text"
          unselectable="on"
        />
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-fake-arrow t-select__right-icon"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
              stroke="black"
              stroke-opacity="0.9"
              stroke-width="1.3"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select Select prefixVue demo works fine 1`] = `
<div>
  <div
    class="t-select__wrap"
    style="width: 200px;"
  >
    <div
      class="t-input__wrap t-select-input--empty t-select"
    >
      <div
        class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        >
          <svg
            class="t-icon t-icon-browse"
            style="margin-right: 8px;"
          >
            <use
              href="#t-icon-browse"
            />
          </svg>
        </div>
        <input
          autocomplete=""
          class="t-input__inner"
          placeholder="-请选择-"
          readonly="readonly"
          type="text"
          unselectable="on"
        />
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-fake-arrow t-select__right-icon"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
              stroke="black"
              stroke-opacity="0.9"
              stroke-width="1.3"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select Select remoteSearchVue demo works fine 1`] = `
<div>
  <div
    class="t-select__wrap"
    style="width: 200px; display: inline-block; margin: 0px 20px 20px 0px;"
  >
    <div
      class="t-input__wrap t-select-input--empty t-select"
    >
      <div
        class="t-input t-size-m t-is-default t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        />
        <input
          autocomplete=""
          class="t-input__inner"
          placeholder="请选择"
          type="text"
          unselectable="off"
        />
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-fake-arrow t-select__right-icon"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
              stroke="black"
              stroke-opacity="0.9"
              stroke-width="1.3"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
   
  <div
    class="t-select__wrap"
    style="width: 400px; display: inline-block;"
  >
    <div
      class="t-input__wrap t-tag-input t-tag-input--break-line t-select-input--multiple t-select-input--empty t-select"
    >
      <div
        class="t-input t-size-m t-is-default t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        />
        <input
          autocomplete=""
          class="t-input__inner"
          placeholder="请输入搜索"
          type="text"
          unselectable="off"
        />
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-fake-arrow t-select__right-icon"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
              stroke="black"
              stroke-opacity="0.9"
              stroke-width="1.3"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select Select sizeVue demo works fine 1`] = `
<div>
  <div
    class="t-select__wrap"
    style="width: 200px; display: inline-block; margin-right: 20px;"
  >
    <div
      class="t-input__wrap t-select-input--empty t-select"
    >
      <div
        class="t-input t-size-s t-is-default t-is-readonly t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        />
        <input
          autocomplete=""
          class="t-input__inner"
          placeholder="请选择"
          readonly="readonly"
          type="text"
          unselectable="on"
        />
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-fake-arrow t-select__right-icon"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
              stroke="black"
              stroke-opacity="0.9"
              stroke-width="1.3"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
   
  <div
    class="t-select__wrap"
    style="width: 200px; display: inline-block; margin-right: 20px;"
  >
    <div
      class="t-input__wrap t-select-input--empty t-select"
    >
      <div
        class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        />
        <input
          autocomplete=""
          class="t-input__inner"
          placeholder="请选择"
          readonly="readonly"
          type="text"
          unselectable="on"
        />
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-fake-arrow t-select__right-icon"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
              stroke="black"
              stroke-opacity="0.9"
              stroke-width="1.3"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
   
  <div
    class="t-select__wrap"
    style="width: 200px; display: inline-block;"
  >
    <div
      class="t-input__wrap t-select-input--empty t-select"
    >
      <div
        class="t-input t-size-l t-is-default t-is-readonly t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        />
        <input
          autocomplete=""
          class="t-input__inner"
          placeholder="请选择"
          readonly="readonly"
          type="text"
          unselectable="on"
        />
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-fake-arrow t-select__right-icon"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
              stroke="black"
              stroke-opacity="0.9"
              stroke-width="1.3"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select Select statusVue demo works fine 1`] = `
<div
  class="tdesign-demo-select-base"
>
  <div
    class="t-select__wrap"
  >
    <div
      class="t-input__wrap t-select-input--empty t-select"
    >
      <div
        class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        />
        <input
          autocomplete=""
          class="t-input__inner"
          placeholder="请选择云解决方案"
          readonly="readonly"
          type="text"
          unselectable="on"
        />
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-fake-arrow t-select__right-icon"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
              stroke="black"
              stroke-opacity="0.9"
              stroke-width="1.3"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
   
  <div
    class="t-select__wrap"
  >
    <div
      class="t-input__wrap t-select-input--empty t-select"
    >
      <div
        class="t-input t-size-m t-is-disabled t-is-default t-is-readonly t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        />
        <input
          autocomplete=""
          class="t-input__inner"
          disabled="disabled"
          placeholder="请选择云解决方案"
          readonly="readonly"
          type="text"
          unselectable="on"
        />
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-fake-arrow t-select__right-icon"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
              stroke="black"
              stroke-opacity="0.9"
              stroke-width="1.3"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
   
  <div
    class="t-select__wrap"
  >
    <div
      class="t-input__wrap t-select-input--empty t-select"
    >
      <div
        class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        />
        <input
          autocomplete=""
          class="t-input__inner"
          placeholder="请选择云解决方案"
          readonly="readonly"
          type="text"
          unselectable="on"
        />
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <div
            class="t-loading--center t-size-s t-loading t-select__right-icon t-select__active-icon"
          >
            <svg
              class="t-loading__gradient t-icon-loading"
              height="1em"
              size="small"
              version="1.1"
              viewBox="0 0 14 14"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <foreignobject
                height="12"
                width="12"
                x="1"
                y="1"
              >
                <div
                  class="t-loading__gradient-conic"
                />
              </foreignobject>
            </svg>
          </div>
        </span>
      </div>
    </div>
  </div>
</div>
`;
